--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  
+  <% if user_signed_in? %>
+  Signed in as <%= current_user.first_name %>. Not you?
+  <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
+  <% else %>
+  <%= link_to "Sign up", new_user_registration_path %> or
+  <%= link_to "Sign in", new_user_session_path %>
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+  <% end %>
+
+  
 <%= yield %>
 
 </body>
