Suppression de fonctions Devise inutiles pour nous

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,11 @@
   Signed in as <%= current_user.first_name %>. Not you?
   <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
   <% else %>
-  <%= link_to "Sign up", new_user_registration_path %> or
-  <%= link_to "Sign in", new_user_session_path %>
+  <!-- 
+    link_to "Sign up", new_user_registration_path 
+      or
+    link_to "Sign in", new_user_session_path
+  --> 
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <% end %>
 
