Profil et listing des users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <% if user_signed_in? %>
   Signed in as <%= current_user.first_name %>. Not you?
   <%= link_to "Sign out", destroy_user_session_path,:method => :delete %>
+  <%= link_to "Profil", user_path(current_user) %>
   <% else %>
   <!-- 
     link_to "Sign up", new_user_registration_path 
@@ -22,6 +23,8 @@
   --> 
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <% end %>
+  
+  <%= link_to "Liste des users", users_path %>
 
   
 <%= yield %>
