Flags BDD events:is_published, users:is_fetching ++ controleur events importation

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Profil de <%= @user.first_name %> <%= @user.last_name %></h1>
 
+<% if @is_connected %>
+<p><%= link_to "Importation", import_path %></p>
+<% end %>
