--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <p><%= link_to 'Home', '/' %></p>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
