Intégration de Facebook Graph API - Affiche les événements à proximité de la position de l'utilisateur

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <% if @is_connected %>
 <p><button id="import">Importation</button></p>
-<p><%= link_to "Importation", import_data_path %></p>
+<p><%= link_to "Importation", import_test_path %></p>
 <% end %>
 
 
