--- a/app/assets/stylesheets/events_se.css
+++ b/app/assets/stylesheets/events_se.css
@@ -32,9 +32,9 @@
     padding: 5px;
     width: 100%;
     color: #111111;
-    text-align: justify;
     border:solid #bdc3c7 1px;
     margin-bottom: 1em;
+    max-height:12em;
 }
 
 
@@ -47,14 +47,32 @@
 .img-event{
     background-color: #585858;
     width: 40%;
-    max-height: 100%;
+    height: 100%;
     overflow: hidden;
     float: left;
+    max-height: 12em;
+  background-size: cover;
+  background-position: center center;
 }
 
-.img-event > img{
-    width: 100%;
-    height: auto;
+.wrapperB {
+    width: 400px;
+    height: 200px;
+    overflow: hidden;
+    border: solid 1px #9f0000;
+    margin: 0 0 20px 0;
+    background-size: cover;
+    background-position: center center
+}
+
+.inner{
+
+    
+}
+
+.img-event > img {
+
+
 }
 
 .content-event{
