--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,21 +1,3 @@
-<!--
-<h1>Main</h1>
-
-<h2>Top contributeurs</h2>
-
-<% @users_top.each do |user| %>
-<p><%= user.first_name %> <%= user.last_name %> <%= user.contributions_counter %></p>
-<% end %>
-
-<h2>Evénements</h2>
-
-<% @events.each do |event| %>
-<p><%= link_to event.title, event %> <%= event.category %></p>
-<% end %>
--->
-
-
-
 <section class="main">
 <nav class="nav-bar">
     <div class="cat-queries-480">
@@ -35,6 +17,15 @@
                 </label>
                 <span class="category-name">All</span>
             </div>
+            <% @categories.each do |category| %>
+            <div>
+                <label class="se-checkbox">
+                    <input type="checkbox"/>
+                    <span></span>
+                </label>
+                <span class="category-name"><%= category %></span>
+            </div>
+          <% end %>
         </div>
     </div>
 
@@ -54,18 +45,27 @@
                 </label>
                 <span class="category-name">All</span>
             </div>
+            <% @cantons.each do |canton| %>
+            <div>
+                <label class="se-checkbox">
+                    <input type="checkbox"/>
+                    <span></span>
+                </label>
+                <span class="category-name"><%= canton %></span>
+            </div>
+          <% end %>
         </div>
     </div>
     <div class="top-contributor cat-queries-480">
         <h3 class="title-top-contributor">Top Contributors</h3>
-
+        <% @users_top.each do |user| %>
         <div>
             <div class="content-top-contributor">
-                <i class="icon-user"></i><span class="name-top-contributor">Deruaz Vincent</span>
-                <span class="value-top-contributor">482</span>
+                <i class="icon-user"></i><span class="name-top-contributor"><%= user.first_name %> <%= user.last_name %></span>
+                <span class="value-top-contributor"><%= user.contributions_counter %></span>
             </div>
-            
         </div>
+        <% end %>
     </div>
 
 </nav>
@@ -87,45 +87,38 @@
             <button class="search-div-btn" href="#"><i class="icon-list"></i> List</button>
         </div>
     </div>
+  <!--
+  <% @events.each do |event| %>
+  <p><%= link_to event.title, event %> <%= event.category %></p>
+  <% end %>
+  -->
     <div class="content">
         <ul class="flex-container">
+            <% @events.each do |event| %>
             <li class="flex-item">
                 <div class="img-event">
+                    <!-- TODO take url from database -->
+                  <!--
+                    <div class="inner">
                     <%= image_tag("http://i.imgur.com/Qt7VGfn.jpg", :alt => "event image") %>
+                    </div>-->
+                  <div class="wrapperB" style="background-image: url('http://krasimirtsonev.com/blog/articles/CSSChallenge1/pic2.jpg');"></div>
                 </div>
                 <div class="content-event">
-                    <p class="title-event">TITLE</p>
+                    <p class="title-event"><%= link_to(event.title, event, :class => "link link-title") %></p>
 
-                    <p class="date-event">Date: Du -- Au --</p>
-
+                  <p class="date-event">Date: From <%= event.start_time.strftime("%d %B %Y") %> to <%= event.end_time.strftime("%d %B %Y") %></p>
                     <p class="multiline-ellipsis">
-                        Itaque tum Scaevola cum in eam ipsam mentionem incidisset, exposuit nobis sermonem Laeli de
-                        amicitia habitum ab illo secum et cum altero genero, C. Fannio Marci filio, paucis diebus
-                        post mortem Africani. Eius disputationis sententias memoriae mandavi, quas hoc libro exposui
-                        arbitratu meo; quasi enim ipsos induxi loquentes, ne 'inquam' et 'inquit' saepius
-                        interponeretur, atque ut tamquam a praesentibus coram haberi sermo videretur.
+                      <%= event.description %>
                     </p>
-
                     <div class="more-event">
-                        <button class="btn" href="#">More</button>
+                      <button class="btn" href="#"><%= link_to("More", event, :class => "link link-btn") %></button>
                     </div>
                 </div>
             </li>
+            <% end %>
         </ul>
     </div>
 </section>
-
 </section>
-
-<h2>Catégories</h2>
-
-<% @categories.each do |category| %>
-<p><%= category %>
-<% end %>
-  
-<h2>Cantons</h2>
-
-<% @cantons.each do |canton| %>
-<p><%= canton %>
-<% end %>
 
