--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,7 +12,7 @@
         <div class="categorie categorie-1">
             <div>
                 <label class="se-checkbox">
-                    <input type="checkbox"/>
+                    <input type="checkbox" class="chk_category" value="all"/>
                     <span></span>
                 </label>
                 <span class="category-name">All</span>
@@ -20,7 +20,7 @@
             <% @categories.each do |category| %>
             <div>
                 <label class="se-checkbox">
-                    <input type="checkbox"/>
+                    <input type="checkbox" class="chk_category" value="<%= category %>"/>
                     <span></span>
                 </label>
                 <span class="category-name"><%= category %></span>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="cat-queries-480">
-        <input type="checkbox" class="categorie categorie-2" id="toggle-2"/>
+        <input type="checkbox" class="categorie categorie-2" id="toggle-2" />
 
         <label class="categorie" for="toggle-2">
             Cantons
@@ -40,7 +40,7 @@
         <div class="categorie categorie-2">
             <div>
                 <label class="se-checkbox">
-                    <input type="checkbox"/>
+                    <input type="checkbox" class="chk_canton" value="all"/>
                     <span></span>
                 </label>
                 <span class="category-name">All</span>
@@ -48,7 +48,7 @@
             <% @cantons.each do |canton| %>
             <div>
                 <label class="se-checkbox">
-                    <input type="checkbox"/>
+                    <input type="checkbox" class="chk_canton" value="<%= canton %>"/>
                     <span></span>
                 </label>
                 <span class="category-name"><%= canton %></span>
@@ -125,12 +125,12 @@
 </section>
 </section>
 <script>
-  $(function() {
+
 $(function() {
         $("#datepicker").datepicker({
           minDate: new Date(),
         });
     });
-});
+
 
   </script>
