add elements to seeds

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <div class="image-cover-div">
-  <%= image_tag("http://i.imgur.com/RuztiBT.jpg", :alt => "cover image" ,:class => "img-cover") %>
+  <%= image_tag(@event.picture, :alt => "cover image" ,:class => "img-cover") %>
 </div>
 <section class="show">
   <div class="show-title">
@@ -7,9 +7,11 @@
     <p class="date-event">From <%= @event.start_time.strftime("%d %B %Y") %> to <%= @event.end_time.strftime("%d %B %Y") %></p>
   </div>
   <div class="show-content">
-    <p>Catégorie: <%= @event.category %></p>
-    <p>Localisation: <%= @event.event_location.city + " " + @event.event_location.canton %></p>
-
+    <div class="show-information">
+      <p>Catégorie: <%= @event.category %></p>
+      <p>Localisation: <%= @event.event_location.city + " " + @event.event_location.canton %></p>
+      <p>Utilisateur: <%= @user.first_name %> <%= @user.last_name %></p>
+    </div>
     <p><%= @event.description %></p>
 
     <div class="map">
