--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,14 +1,13 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 @import url('http://fonts.googleapis.com/css?family=Roboto');
 
-.map{
-  background:red;
-  height:280px;
-  
-  margin:55px;
+.map,
+#map{
+  margin:auto;
 }
 
 body, html {
+  margin:0;
 }
 
 * {
@@ -69,6 +68,10 @@ footer {
 
 .header-content {
     padding-left: 2em;
+}
+
+header{
+  height: 10em;
 }
 
 footer {
@@ -221,6 +224,7 @@ input[type=text] {
 input[type="text"]:focus {
     background: rgba(255, 255, 255, 0.5);
     box-shadow: inset 0 -1px 0 #42a9ec;
+    
 }
 
 /*PLACHOLDER*/
@@ -655,6 +659,10 @@ input[type=checkbox].categorie:checked + label:after {
   display: inline-block;
 }
 
+.site-title{
+  font-size: 2.5em;
+}
+
 /**********************************/
 /* MEDIA QUERIES                  */
 /**********************************/
@@ -680,20 +688,12 @@ input[type=checkbox].categorie:checked + label:after {
     }
 
     .site-title{
-        font-size: 0.5em;
+        font-size: 1.5em;
     }
 
-    .img-event{
-        background-color: #585858;
-        width: 100%;
-        max-height: 100%;
-        overflow: hidden;
-        float: none;
-    }
-
-    .img-event > img{
-        width: 100%;
-        height: auto;
+    .img-event,
+    .image-cover-div{
+        display:none;
     }
 
     .content-event{
@@ -701,6 +701,8 @@ input[type=checkbox].categorie:checked + label:after {
         float: none;
         max-height: 100%;
     }
+  
+
 }
 
 /* Small Devices, Tablets */
@@ -714,7 +716,8 @@ input[type=checkbox].categorie:checked + label:after {
         display: block;
     }
 
-    .fb-login-button-large{
+    .fb-login-button-large,
+    {
         display: none;
     }
 
@@ -757,6 +760,14 @@ input[type=checkbox].categorie:checked + label:after {
     .top-contributor{
         float: right;
         margin-top: 0;
+    }
+  
+    #datepicker{
+      display:none;
+    }
+  
+    .btn-user{
+      float:none;
     }
 }
 
