--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag '//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css', media: 'all' %>
+  <script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"></script>
+  <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" type="text/javascript"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  
   
   <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
 </head>
@@ -22,7 +23,7 @@
   <header>
     
     <div class="header-content">
-      <h1><span class="site-title"> Social Events</span>
+      <div class="site-title"> Social Events</div>
         <% if not user_signed_in? %>
               <div class="fb-login-button fb-login-button-large"><%= link_to(image_tag("fb_login.png", :alt => "facebook button", :class => ""),
   user_omniauth_authorize_path(:facebook)) %></div>
@@ -37,7 +38,9 @@
                <%= button_to "Home", "/", :class => "btn", :method => :get %>
             </div>
       <% end %>
-        </h1>
+      <% if user_signed_in? %>
+      Welcome <%= current_user.last_name+' '+current_user.first_name %>
+      <% end %>
     </div>
     
     <% if alert!=nil %>  
