--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <% if user_signed_in? %>
              <div class="btn-user">
               <%= button_to "Sign out", destroy_user_session_path, :class => "btn", :method => :delete %>
-              <%= button_to "Profil", user_path(current_user), :class => "btn" %>
+               <%= button_to "Profil", user_path(current_user), :class => "btn", :method => :get %>
                <%= button_to "Home", "/", :class => "btn", :method => :get %>
             </div>
       <% end %>
