Modification du profil: listing events + suppression (dépublication?)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       </div>
     <% end %>
   
-    <% if alert!=nil %>  
+    <% if notice!=nil %>  
       <div class="notify notify warning notice" role="alert">  
         <%= notice %>
         <button type="button" class="notify-close">&times;</button>
