solution au chargement de .js inutile

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-
+<%= raw javascript_include_view_js %>
 <div class="image-cover-div">
   <%= image_tag(@event.picture, :alt => "cover image" ,:class => "img-cover") %>
 </div>
