--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
           <%= button_to "Sign out", destroy_user_session_path, :class => "btn", :method => :delete %>
           <%= button_to "Profil", user_path(current_user), :class => "btn", :method => :get %>
           <%= button_to "Home", "/", :class => "btn", :method => :get %>
+          <%= button_to "Utilisateurs", users_path, :class => "btn", :method => :get %>
         </div>
     <% end %>
     <% if not user_signed_in? %>
