--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,7 +27,7 @@
     <div class="map">
       <%= hidden_field_tag 'lat', @events_location.latitude %>
       <%= hidden_field_tag 'lon', @events_location.longitude %>
-      <div id="map" style='width: 800px; height: 400px;'></div>
+      <div id="map" style='width: 100%; height: 400px;'></div>
     </div>
 </section>
 
